added info to votes+contestant csv files

--- a/notebooks/test notebook.ipynb
+++ b/notebooks/test notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "42909ea9",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "8de62a77",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "1a5cfda1",
    "metadata": {},
    "outputs": [
@@ -154,15 +154,15 @@
        "49982  2023  final             NaN           NaN         UKRAINE    GERMANY   \n",
        "49983  2023  final             NaN           NaN  UNITED KINGDOM    GERMANY   \n",
        "\n",
-       "       total_points tele_points  jury_points  \n",
-       "49979             0         NaN            0  \n",
-       "49980             0         NaN            0  \n",
-       "49981             0         NaN            0  \n",
-       "49982             0         NaN            0  \n",
-       "49983             0         NaN            0  "
+       "       total_points  tele_points  jury_points  \n",
+       "49979             0          NaN            0  \n",
+       "49980             0          NaN            0  \n",
+       "49981             0          NaN            0  \n",
+       "49982             0          NaN            0  \n",
+       "49983             0          NaN            0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "2d3f6820",
    "metadata": {},
    "outputs": [
@@ -184,18 +184,18 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 49984 entries, 0 to 49983\n",
       "Data columns (total 9 columns):\n",
-      " #   Column           Non-Null Count  Dtype \n",
-      "---  ------           --------------  ----- \n",
-      " 0   year             49984 non-null  int64 \n",
-      " 1   round            49984 non-null  object\n",
-      " 2   from_country_id  47017 non-null  object\n",
-      " 3   to_country_id    47011 non-null  object\n",
-      " 4   from_country     49984 non-null  object\n",
-      " 5   to_country       49984 non-null  object\n",
-      " 6   total_points     49984 non-null  int64 \n",
-      " 7   tele_points      7396 non-null   object\n",
-      " 8   jury_points      49984 non-null  int64 \n",
-      "dtypes: int64(3), object(6)\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   year             49984 non-null  int64  \n",
+      " 1   round            49984 non-null  object \n",
+      " 2   from_country_id  47033 non-null  object \n",
+      " 3   to_country_id    47018 non-null  object \n",
+      " 4   from_country     49984 non-null  object \n",
+      " 5   to_country       49984 non-null  object \n",
+      " 6   total_points     49984 non-null  int64  \n",
+      " 7   tele_points      7518 non-null   float64\n",
+      " 8   jury_points      49984 non-null  int64  \n",
+      "dtypes: float64(1), int64(3), object(5)\n",
       "memory usage: 3.4+ MB\n"
      ]
     }
@@ -1557,9 +1557,145 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "fb67add6",
+   "metadata": {},
+   "source": [
+    "# Add country codes to votes.csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "53cfd173",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>from_country_id</th>\n",
+       "      <th>to_country_id</th>\n",
+       "      <th>from_country</th>\n",
+       "      <th>to_country</th>\n",
+       "      <th>total_points</th>\n",
+       "      <th>tele_points</th>\n",
+       "      <th>jury_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49979</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>final</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SPAIN</td>\n",
+       "      <td>GERMANY</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49980</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>final</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWEDEN</td>\n",
+       "      <td>GERMANY</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49981</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>final</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWITZERLAND</td>\n",
+       "      <td>GERMANY</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49982</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>final</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UKRAINE</td>\n",
+       "      <td>GERMANY</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49983</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>final</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UNITED KINGDOM</td>\n",
+       "      <td>GERMANY</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       year  round from_country_id to_country_id    from_country to_country  \\\n",
+       "49979  2023  final             NaN           NaN           SPAIN    GERMANY   \n",
+       "49980  2023  final             NaN           NaN          SWEDEN    GERMANY   \n",
+       "49981  2023  final             NaN           NaN     SWITZERLAND    GERMANY   \n",
+       "49982  2023  final             NaN           NaN         UKRAINE    GERMANY   \n",
+       "49983  2023  final             NaN           NaN  UNITED KINGDOM    GERMANY   \n",
+       "\n",
+       "       total_points  tele_points  jury_points  \n",
+       "49979             0          NaN            0  \n",
+       "49980             0          NaN            0  \n",
+       "49981             0          NaN            0  \n",
+       "49982             0          NaN            0  \n",
+       "49983             0          NaN            0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "votes.tail()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aee4b35",
+   "id": "be75c7af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1567,7 +1703,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53cfd173",
+   "id": "a1daee2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f511ceea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e05d6a0",
    "metadata": {},
    "outputs": [],
    "source": []
