--- a/notebooks/test notebook.ipynb
+++ b/notebooks/test notebook.ipynb
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "id": "0b2ee4e4",
    "metadata": {},
    "outputs": [
@@ -2038,7 +2038,7 @@
        "4         ANDORRA     AD    AND"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2695,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "id": "332e94ce",
    "metadata": {},
    "outputs": [],
@@ -2705,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "id": "4ec0bcfe",
    "metadata": {},
    "outputs": [],
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "159f1542",
    "metadata": {},
    "outputs": [
@@ -2757,21 +2757,21 @@
        "      <td>1957-05-01</td>\n",
        "      <td>final</td>\n",
        "      <td>at</td>\n",
-       "      <td>nl</td>\n",
+       "      <td>at</td>\n",
        "      <td>AUSTRIA</td>\n",
-       "      <td>NETHERLANDS</td>\n",
-       "      <td>6</td>\n",
+       "      <td>AUSTRIA</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1957-05-01</td>\n",
        "      <td>final</td>\n",
+       "      <td>be</td>\n",
        "      <td>at</td>\n",
-       "      <td>fr</td>\n",
+       "      <td>BELGIUM</td>\n",
        "      <td>AUSTRIA</td>\n",
-       "      <td>FRANCE</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
@@ -2780,10 +2780,10 @@
        "      <th>2</th>\n",
        "      <td>1957-05-01</td>\n",
        "      <td>final</td>\n",
-       "      <td>at</td>\n",
        "      <td>dk</td>\n",
-       "      <td>AUSTRIA</td>\n",
+       "      <td>at</td>\n",
        "      <td>DENMARK</td>\n",
+       "      <td>AUSTRIA</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
@@ -2792,22 +2792,22 @@
        "      <th>3</th>\n",
        "      <td>1957-05-01</td>\n",
        "      <td>final</td>\n",
+       "      <td>fr</td>\n",
        "      <td>at</td>\n",
-       "      <td>lu</td>\n",
+       "      <td>FRANCE</td>\n",
        "      <td>AUSTRIA</td>\n",
-       "      <td>LUXEMBOURG</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1957-05-01</td>\n",
        "      <td>final</td>\n",
-       "      <td>at</td>\n",
        "      <td>de</td>\n",
-       "      <td>AUSTRIA</td>\n",
+       "      <td>at</td>\n",
        "      <td>GERMANY</td>\n",
+       "      <td>AUSTRIA</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
@@ -2817,22 +2817,22 @@
        "</div>"
       ],
       "text/plain": [
-       "         year  round from_country_id to_country_id from_country   to_country  \\\n",
-       "0  1957-05-01  final              at            nl      AUSTRIA  NETHERLANDS   \n",
-       "1  1957-05-01  final              at            fr      AUSTRIA       FRANCE   \n",
-       "2  1957-05-01  final              at            dk      AUSTRIA      DENMARK   \n",
-       "3  1957-05-01  final              at            lu      AUSTRIA   LUXEMBOURG   \n",
-       "4  1957-05-01  final              at            de      AUSTRIA      GERMANY   \n",
+       "         year  round from_country_id to_country_id from_country to_country  \\\n",
+       "0  1957-05-01  final              at            at      AUSTRIA    AUSTRIA   \n",
+       "1  1957-05-01  final              be            at      BELGIUM    AUSTRIA   \n",
+       "2  1957-05-01  final              dk            at      DENMARK    AUSTRIA   \n",
+       "3  1957-05-01  final              fr            at       FRANCE    AUSTRIA   \n",
+       "4  1957-05-01  final              de            at      GERMANY    AUSTRIA   \n",
        "\n",
        "   total_points  tele_points  jury_points  \n",
-       "0             6          NaN            6  \n",
+       "0             0          NaN            0  \n",
        "1             0          NaN            0  \n",
        "2             0          NaN            0  \n",
-       "3             3          NaN            3  \n",
+       "3             0          NaN            0  \n",
        "4             0          NaN            0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2843,18 +2843,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "74029126",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50010 entries, 0 to 50009\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   year             50010 non-null  object\n",
+      " 1   round            50010 non-null  object\n",
+      " 2   from_country_id  47814 non-null  object\n",
+      " 3   to_country_id    47018 non-null  object\n",
+      " 4   from_country     50010 non-null  object\n",
+      " 5   to_country       50010 non-null  object\n",
+      " 6   total_points     50010 non-null  int64 \n",
+      " 7   tele_points      50010 non-null  int64 \n",
+      " 8   jury_points      50010 non-null  int64 \n",
+      "dtypes: int64(3), object(6)\n",
+      "memory usage: 3.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "votes_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c1c959c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "50005    0\n",
+       "50006    0\n",
+       "50007    5\n",
+       "50008    0\n",
+       "50009    0\n",
+       "Name: tele_points, Length: 50010, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "votes_clean[\"tele_points\"].astype(np.int64)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "id": "dae94dad",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2891,7 +2948,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "89ea556b",
+   "id": "e243d023",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2901,7 +2958,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6da03985",
+   "id": "82f4942f",
    "metadata": {},
    "outputs": [
     {
@@ -3029,7 +3086,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2870b71c",
+   "id": "c6e1472b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3039,7 +3096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14734548",
+   "id": "6ad211c1",
    "metadata": {},
    "outputs": [],
    "source": []
