creating new "votes" notebook with documentation

--- a/notebooks/test notebook.ipynb
+++ b/notebooks/test notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "42909ea9",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "8de62a77",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "1a5cfda1",
    "metadata": {},
    "outputs": [
@@ -83,60 +83,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>49979</th>\n",
-       "      <td>2023</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1957</td>\n",
        "      <td>final</td>\n",
+       "      <td>at</td>\n",
+       "      <td>nl</td>\n",
+       "      <td>AUSTRIA</td>\n",
+       "      <td>NETHERLANDS</td>\n",
+       "      <td>6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SPAIN</td>\n",
-       "      <td>GERMANY</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1957</td>\n",
+       "      <td>final</td>\n",
+       "      <td>at</td>\n",
+       "      <td>fr</td>\n",
+       "      <td>AUSTRIA</td>\n",
+       "      <td>FRANCE</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49980</th>\n",
-       "      <td>2023</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1957</td>\n",
        "      <td>final</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SWEDEN</td>\n",
-       "      <td>GERMANY</td>\n",
+       "      <td>at</td>\n",
+       "      <td>dk</td>\n",
+       "      <td>AUSTRIA</td>\n",
+       "      <td>DENMARK</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49981</th>\n",
-       "      <td>2023</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1957</td>\n",
        "      <td>final</td>\n",
+       "      <td>at</td>\n",
+       "      <td>lu</td>\n",
+       "      <td>AUSTRIA</td>\n",
+       "      <td>LUXEMBOURG</td>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SWITZERLAND</td>\n",
-       "      <td>GERMANY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49982</th>\n",
-       "      <td>2023</td>\n",
+       "      <th>4</th>\n",
+       "      <td>1957</td>\n",
        "      <td>final</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>UKRAINE</td>\n",
-       "      <td>GERMANY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49983</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>final</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>UNITED KINGDOM</td>\n",
+       "      <td>at</td>\n",
+       "      <td>de</td>\n",
+       "      <td>AUSTRIA</td>\n",
        "      <td>GERMANY</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -147,28 +147,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       year  round from_country_id to_country_id    from_country to_country  \\\n",
-       "49979  2023  final             NaN           NaN           SPAIN    GERMANY   \n",
-       "49980  2023  final             NaN           NaN          SWEDEN    GERMANY   \n",
-       "49981  2023  final             NaN           NaN     SWITZERLAND    GERMANY   \n",
-       "49982  2023  final             NaN           NaN         UKRAINE    GERMANY   \n",
-       "49983  2023  final             NaN           NaN  UNITED KINGDOM    GERMANY   \n",
+       "   year  round from_country_id to_country_id from_country   to_country  \\\n",
+       "0  1957  final              at            nl      AUSTRIA  NETHERLANDS   \n",
+       "1  1957  final              at            fr      AUSTRIA       FRANCE   \n",
+       "2  1957  final              at            dk      AUSTRIA      DENMARK   \n",
+       "3  1957  final              at            lu      AUSTRIA   LUXEMBOURG   \n",
+       "4  1957  final              at            de      AUSTRIA      GERMANY   \n",
        "\n",
-       "       total_points  tele_points  jury_points  \n",
-       "49979             0          NaN            0  \n",
-       "49980             0          NaN            0  \n",
-       "49981             0          NaN            0  \n",
-       "49982             0          NaN            0  \n",
-       "49983             0          NaN            0  "
+       "   total_points  tele_points  jury_points  \n",
+       "0             6          NaN            6  \n",
+       "1             0          NaN            0  \n",
+       "2             0          NaN            0  \n",
+       "3             3          NaN            3  \n",
+       "4             0          NaN            0  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "votes.tail()"
+    "votes.head()"
    ]
   },
   {
@@ -3006,7 +3006,7 @@
    "id": "6ff99cb4",
    "metadata": {},
    "source": [
-    "## Now merge on t_country_id and repeat"
+    "## Now merge on to_country_id and repeat"
    ]
   },
   {
